# url_extractor

./: .gitignore  README.md  pyproject.toml
config/: logging_config.yaml
src/: main.py
src/url_extractor/: __init__.py  logger.py  url_extractor.py
