[tool.poetry]
name = "url-extractor"
version = "0.1.0"
description = "A Python tool to extract sub-URLs from a given main URL"
authors = ["zolcsika71 <bushdoctor2008@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "*"
beautifulsoup4 = "*"
pyyaml = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "url_extractor"
version = "0.1.0"
description = ""
authors = ["zolcsika71 <bushdoctor2008@gmail.com>"]
packages = [{include = "url_extractor", from = "src"}]